<resources>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">MEDKIT_01</string>
    <!--    <string name="mapbox_access_token">pk.eyJ1IjoiYWhtZWRtZWRyYWgiLCJhIjoiY2thZ3kzb3A1MGI3aTJ6bzU1YTZqbTg3dCJ9.mCCxCNsPFsiIKZykClNv5Q</string>-->

    <string name="app_name">Medkit</string>
    <string name="edit_text_name_label">Your name</string>
    <string name="edit_text_email_label">Email address</string>
    <string name="edit_text_password_label">Password</string>
    <string name="edit_text_confirm_password_label">Confirm password</string>
    <string name="introductory">Get in touch, and</string>
    <string name="login">Login</string>
    <string name="login_dot">Login.</string>
    <string name="or">Or</string>
    <string name="choose">Choose or take</string>
    <string name="picture">a picture!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="introductory_picture">Upload your photo to easy communicate with others.</string>
    <string name="finish">Finish</string>
    <string name="skip">skip</string>
    <string name="specialty">What\'s your specialty?</string>
    <string name="enter_speciality">(Required)</string>
    <string name="bio">What\'s your bio?</string>
    <string name="enter_bio">(Optional)</string>
    <string name="location">What\'s your location?</string>
    <string name="enter_location">(Required)</string>
    <string name="graduation">What\'s your graduation?</string>
    <string name="enter_graduation">(Required)</string>
    <string name="hint_speciality">Speciality</string>
    <string name="hint_bio">Bio</string>
    <string name="hint_location">Location</string>
    <string name="hint_graduation_faculty">Enter graduation faculty</string>
    <string name="hint_graduation_year">Enter graduation year</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">202265224401850</string>
    <string name="fb_login_protocol_scheme">fb202265224401850</string>
    <string-array name="category_spinner">
        <item>General - عام</item>
        <item>Corona - كورونا</item>
        <item>Diabetes - سكر</item>
        <item>Heart - قلب</item>
        <item>Ophthalmology - عيون</item>
        <item>Laboratories - تحاليل</item>
        <item>Bones - عظام</item>
        <item>Muscles - االام عضلات</item>
        <item>Dentistry - اسنان</item>
        <item>Physiotherapy - علاج طبيعى</item>
        <item>Nutrition - تغذية</item>
        <item>Psychitary - نفسى</item>
    </string-array>
    <string-array name="speciality_spinner">
        <item>الجراحة العامة - General Surgery</item>
        <item>العظام - Orthopedics</item>
        <item>القلب - cardiology</item>
        <item>التجميل - Cosmotics medicine</item>
        <item>الأمراض الجلدية - Dermatology</item>
        <item>المسالك البولية - Urology</item>
        <item>الباطنة و الجهاز الهضمي - Gastroenterology</item>
        <item>الأسنان - dentist</item>
        <item>الأطفال - Pediatrics</item>
        <item>العيون - ophthalmology</item>
        <item>التحاليل الطبية - Medical tests</item>
    </string-array>
</resources>
