<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBackGroundColor"
    android:orientation="vertical"
    android:padding="32dp"
    android:theme="@style/MainAppTheme">


    <TextView
        android:id="@+id/text_view_touch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/introductory"
        android:textColor="@color/darkGrayText"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/login_dot"
        android:textColor="@color/darkGrayText"
        android:textSize="26sp"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_email_label"
        app:hintTextColor="@color/colorHintText"
        app:startIconDrawable="@drawable/icon_simple_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBackGroundColor"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_password_label"
        app:endIconMode="password_toggle"
        app:hintTextColor="@color/colorHintText"
        app:startIconDrawable="@drawable/icon_awesome_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBackGroundColor"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold2"
        android:text="@string/forgot_password"
        android:textColor="@color/darkGrayText"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_login"
            style="@style/MainAppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/purble_round_button"
            android:text="@string/login"
            android:textColor="@color/lightBackGroundColor"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/or" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <ImageView
                android:id="@+id/image_view_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:src="@drawable/icon_awesome_facebook" />

            <ImageView
                android:id="@+id/image_view_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_awesome_google" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>
